--- a/package.json
+++ b/package.json
@@ -7,26 +7,28 @@
     "build:serial": "NODE_OPTIONS='--no-deprecation' pnpm run --filter=\"./packages/*\" build && tsdown",
     "dev": "DEV=true tsdown",
     "docs:build": "typedoc --out ../api-docs/docs --options typedoc.json --tsconfig tsconfig.lib.json",
-    "tsdown": "tsdown",
+    "bundle:build": "cd bundle && pnpm run full && pnpm run publish",
+    "demos:copy": "rm -rf ../demos/ixfx && copyfiles -u 3 ./bundle/dist/min/**/* ../demos/ixfx",
     "clean": "rimraf -g dist coverage \"packages/*/dist\" && pnpm run -r --parallel clean",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:ecosystem": "pnpm test run && pnpm typecheck",
-    "mono": "monoman",
     "mono:check": "monoman --check",
-    "publint": "tsx publint.ts",
-    "release": "bumpp -r",
+    "mono:update": "monoman --write",
+    "verify": "pnpm run mono:check && tsx publint.ts",
+    "release": "bumpp -r && pnpm run publish",
     "publish": "pnpm publish --recursive --no-git-checks --access public",
     "typecheck": "pnpm run /^typecheck:/",
     "typecheck:lib": "tsc --noEmit -p tsconfig.lib.json",
     "typecheck:test": "tsc --noEmit -p tsconfig.test.json"
   },
   "devDependencies": {
+    "@arethetypeswrong/cli": "catalog:",
     "@eslint/js": "catalog:",
     "@types/node": "catalog:",
-    "@vitest/coverage-v8": "catalog:",
-    "@types/web-bluetooth": "latest",
     "@types/w3c-web-serial": "latest",
+    "@types/web-bluetooth": "latest",
+    "@vitest/coverage-v8": "catalog:",
     "bumpp": "catalog:",
     "change-case": "catalog:",
     "eslint": "catalog:",
@@ -37,16 +39,17 @@
     "rimraf": "catalog:",
     "tsdown": "catalog:",
     "tsx": "catalog:",
-    "typescript": "catalog:",
     "typedoc": "catalog:",
+    "typescript": "catalog:",
     "unplugin": "catalog:",
     "unplugin-macros": "catalog:",
     "unplugin-unused": "catalog:",
     "vite": "catalog:",
-    "vitest": "catalog:",
-    "@arethetypeswrong/cli": "catalog:"
+    "vitest": "catalog:"
   },
   "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808",
   "type": "module",
-  "dependencies": {}
+  "dependencies": {
+    "copyfiles": "2.4.1"
+  }
 }
