--- a/packages/debug/package.json
+++ b/packages/debug/package.json
@@ -1,53 +1,53 @@
 {
-	"name": "@ixfx/debug",
-	"version": "0.56.0",
-	"license": "MIT",
-	"type": "module",
-	"sideEffects": false,
-	"files": [
-		"dist"
-	],
-	"types": "./dist/index.d.ts",
-	"exports": {
-		".": {
-			"dev": "./src/index.ts",
-			"default": "./dist/index.js"
-		},
-		"./package.json": "./package.json"
-	},
-	"typesVersions": {
-		"*": {
-			"*": [
-				"./dist/*",
-				"./*"
-			]
-		}
-	},
-	"publishConfig": {
-		"access": "public",
-		"exports": {
-			".": "./dist/index.js",
-			"./package.json": "./package.json"
-		}
-	},
-	"scripts": {},
-	"description": "ixfx guards",
-	"keywords": [
-		"ixfx",
-		"interactivity",
-		"guards"
-	],
-	"homepage": "https://ixfxfun.dev",
-	"bugs": {
-		"url": "https://github.com/@ixfxfun/ixfx/issues"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/@ixfxfun/ixfx.git",
-		"directory": "packages/guards"
-	},
-	"author": "Clint Heyer <clint@thestaticvoid.net>",
-	"engines": {
-		"node": ">=20.19.0"
-	}
+  "name": "@ixfx/debug",
+  "version": "0.56.0",
+  "license": "MIT",
+  "type": "module",
+  "sideEffects": false,
+  "files": [
+    "dist"
+  ],
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "dev": "./src/index.ts",
+      "default": "./dist/index.js"
+    },
+    "./package.json": "./package.json"
+  },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "./dist/*",
+        "./*"
+      ]
+    }
+  },
+  "publishConfig": {
+    "access": "public",
+    "exports": {
+      ".": "./dist/index.js",
+      "./package.json": "./package.json"
+    }
+  },
+  "scripts": {},
+  "description": "ixfx debug",
+  "keywords": [
+    "ixfx",
+    "interactivity",
+    "debug"
+  ],
+  "homepage": "https://ixfxfun.dev",
+  "bugs": {
+    "url": "https://github.com/clinth/ixfx/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/clinth/ixfx.git",
+    "directory": "packages/debug"
+  },
+  "author": "Clint Heyer <clint@thestaticvoid.net>",
+  "engines": {
+    "node": ">=24.0.0"
+  }
 }
