--- a/packages/flow/package.json
+++ b/packages/flow/package.json
@@ -1,41 +1,59 @@
 {
-	"name": "@ixfx/flow",
-	"version": "0.56.0",
-	"license": "MIT",
-	"type": "module",
-	"sideEffects": false,
-	"files": [
-		"dist/",
-		"bundle/"
-	],
-	"scripts": {},
-	"dependencies": {
-		"@ixfx/arrays": "workspace:^",
-		"@ixfx/core": "workspace:^",
-		"@ixfx/debug": "workspace:^",
-		"@ixfx/collections": "workspace:^",
-		"@ixfx/events": "workspace:^",
-		"@ixfx/guards": "workspace:^",
-		"@ixfx/numbers": "workspace:^"
-	},
-	"exports": {
-		".": {
-			"dev": "./src/index.ts",
-			"default": "./dist/index.js"
-		},
-		"./state-machine": {
-			"dev": "./src/state-machine.ts",
-			"default": "./dist/state-machine.js"
-		},
-		"./package.json": "./package.json"
-	},
-	"publishConfig": {
-		"main": "dist/src/index.js",
-		"exports": {
-			".": "./dist/index.js",
-			"./state-machine": "./dist/state-machine.js",
-			"./package.json": "./package.json"
-		}
-	},
-	"types": "./dist/index.d.ts"
+  "name": "@ixfx/flow",
+  "version": "0.56.0",
+  "license": "MIT",
+  "type": "module",
+  "sideEffects": false,
+  "files": [
+    "dist"
+  ],
+  "scripts": {},
+  "dependencies": {
+    "@ixfx/arrays": "workspace:^",
+    "@ixfx/core": "workspace:^",
+    "@ixfx/debug": "workspace:^",
+    "@ixfx/collections": "workspace:^",
+    "@ixfx/events": "workspace:^",
+    "@ixfx/guards": "workspace:^",
+    "@ixfx/numbers": "workspace:^"
+  },
+  "exports": {
+    ".": {
+      "dev": "./src/index.ts",
+      "default": "./dist/index.js"
+    },
+    "./state-machine": {
+      "dev": "./src/state-machine.ts",
+      "default": "./dist/state-machine.js"
+    },
+    "./package.json": "./package.json"
+  },
+  "publishConfig": {
+    "access": "public",
+    "exports": {
+      ".": "./dist/index.js",
+      "./state-machine": "./dist/state-machine.js",
+      "./package.json": "./package.json"
+    }
+  },
+  "types": "./dist/index.d.ts",
+  "description": "ixfx flow",
+  "keywords": [
+    "ixfx",
+    "interactivity",
+    "flow"
+  ],
+  "homepage": "https://ixfxfun.dev",
+  "bugs": {
+    "url": "https://github.com/clinth/ixfx/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/clinth/ixfx.git",
+    "directory": "packages/flow"
+  },
+  "author": "Clint Heyer <clint@thestaticvoid.net>",
+  "engines": {
+    "node": ">=24.0.0"
+  }
 }
