--- a/packages/io/package.json
+++ b/packages/io/package.json
@@ -1,54 +1,73 @@
 {
-	"name": "@ixfx/io",
-	"version": "0.56.0",
-	"license": "MIT",
-	"type": "module",
-	"sideEffects": false,
-	"files": [
-		"dist"
-	],
-	"scripts": {},
-	"dependencies": {
-		"@ixfx/arrays": "workspace:*",
-		"@ixfx/collections": "workspace:*",
-		"@ixfx/core": "workspace:*",
-		"@ixfx/debug": "workspace:*",
-		"@ixfx/dom": "workspace:*",
-		"@ixfx/events": "workspace:*",
-		"@ixfx/flow": "workspace:*",
-		"@ixfx/geometry": "workspace:*",
-		"@ixfx/guards": "workspace:*",
-		"@ixfx/numbers": "workspace:*",
-		"@ixfx/random": "workspace:*",
-		"@ixfx/trackers": "workspace:*",
-		"@ixfx/visual": "workspace:*"
-	},
-	"devDependencies": {
-		"@types/web-bluetooth": "latest",
-		"@types/w3c-web-serial": "latest"
-	},
-	"exports": {
-		".": {
-			"dev": "./src/index.ts",
-			"default": "./dist/index.js"
-		},
-		"./audio": {
-			"dev": "./src/audio/index.ts",
-			"default": "./dist/audio/index.js"
-		},
-		"./midi": {
-			"dev": "./src/midi/index.ts",
-			"default": "./dist/midi/index.js"
-		},
-		"./package.json": "./package.json"
-	},
-	"publishConfig": {
-		"main": "dist/src/index.js",
-		"exports": {
-			".": "./dist/index.js",
-			"./audio": "./dist/audio/index.js",
-			"./midi": "./dist/midi/index.js",
-			"./package.json": "./package.json"
-		}
-	}
+  "name": "@ixfx/io",
+  "version": "0.56.0",
+  "license": "MIT",
+  "type": "module",
+  "sideEffects": false,
+  "files": [
+    "dist"
+  ],
+  "scripts": {},
+  "dependencies": {
+    "@ixfx/arrays": "workspace:*",
+    "@ixfx/collections": "workspace:*",
+    "@ixfx/core": "workspace:*",
+    "@ixfx/debug": "workspace:*",
+    "@ixfx/dom": "workspace:*",
+    "@ixfx/events": "workspace:*",
+    "@ixfx/flow": "workspace:*",
+    "@ixfx/geometry": "workspace:*",
+    "@ixfx/guards": "workspace:*",
+    "@ixfx/numbers": "workspace:*",
+    "@ixfx/random": "workspace:*",
+    "@ixfx/trackers": "workspace:*",
+    "@ixfx/visual": "workspace:*"
+  },
+  "devDependencies": {
+    "@types/web-bluetooth": "latest",
+    "@types/w3c-web-serial": "latest"
+  },
+  "exports": {
+    ".": {
+      "dev": "./src/index.ts",
+      "default": "./dist/index.js"
+    },
+    "./audio": {
+      "dev": "./src/audio/index.ts",
+      "default": "./dist/audio/index.js"
+    },
+    "./midi": {
+      "dev": "./src/midi/index.ts",
+      "default": "./dist/midi/index.js"
+    },
+    "./package.json": "./package.json"
+  },
+  "publishConfig": {
+    "access": "public",
+    "exports": {
+      ".": "./dist/index.js",
+      "./audio": "./dist/audio/index.js",
+      "./midi": "./dist/midi/index.js",
+      "./package.json": "./package.json"
+    }
+  },
+  "description": "ixfx io",
+  "keywords": [
+    "ixfx",
+    "interactivity",
+    "io"
+  ],
+  "homepage": "https://ixfxfun.dev",
+  "bugs": {
+    "url": "https://github.com/clinth/ixfx/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/clinth/ixfx.git",
+    "directory": "packages/io"
+  },
+  "author": "Clint Heyer <clint@thestaticvoid.net>",
+  "engines": {
+    "node": ">=24.0.0"
+  }
 }
