--- a/packages/visual/package.json
+++ b/packages/visual/package.json
@@ -1,55 +1,74 @@
 {
-	"name": "@ixfx/visual",
-	"version": "0.56.0",
-	"license": "MIT",
-	"type": "module",
-	"sideEffects": false,
-	"files": [
-		"dist"
-	],
-	"scripts": {},
-	"dependencies": {
-		"@ixfx/arrays": "workspace:*",
-		"@ixfx/collections": "workspace:*",
-		"@ixfx/core": "workspace:*",
-		"@ixfx/dom": "workspace:*",
-		"@ixfx/events": "workspace:*",
-		"@ixfx/flow": "workspace:*",
-		"@ixfx/geometry": "workspace:*",
-		"@ixfx/guards": "workspace:*",
-		"@ixfx/numbers": "workspace:*",
-		"@ixfx/random": "workspace:*"
-	},
-	"devDependencies": {
-		"colorizr": "3.0.7"
-	},
-	"exports": {
-		".": {
-			"dev": "./src/index.ts",
-			"default": "./dist/index.js"
-		},
-		"./colour": {
-			"dev": "./src/colour/index.ts",
-			"default": "./dist/colour/index.js"
-		},
-		"./drawing": {
-			"dev": "./src/drawing.ts",
-			"default": "./dist/drawing.js"
-		},
-		"./svg": {
-			"dev": "./src/svg/index.ts",
-			"default": "./dist/svg/index.js"
-		},
-		"./package.json": "./package.json"
-	},
-	"publishConfig": {
-		"main": "dist/src/index.js",
-		"exports": {
-			".": "./dist/index.js",
-			"./colour": "./dist/colour/index.js",
-			"./drawing": "./dist/drawing.js",
-			"./svg": "./dist/svg/index.js",
-			"./package.json": "./package.json"
-		}
-	}
+  "name": "@ixfx/visual",
+  "version": "0.56.0",
+  "license": "MIT",
+  "type": "module",
+  "sideEffects": false,
+  "files": [
+    "dist"
+  ],
+  "scripts": {},
+  "dependencies": {
+    "@ixfx/arrays": "workspace:*",
+    "@ixfx/collections": "workspace:*",
+    "@ixfx/core": "workspace:*",
+    "@ixfx/dom": "workspace:*",
+    "@ixfx/events": "workspace:*",
+    "@ixfx/flow": "workspace:*",
+    "@ixfx/geometry": "workspace:*",
+    "@ixfx/guards": "workspace:*",
+    "@ixfx/numbers": "workspace:*",
+    "@ixfx/random": "workspace:*"
+  },
+  "devDependencies": {
+    "colorizr": "3.0.7"
+  },
+  "exports": {
+    ".": {
+      "dev": "./src/index.ts",
+      "default": "./dist/index.js"
+    },
+    "./colour": {
+      "dev": "./src/colour/index.ts",
+      "default": "./dist/colour/index.js"
+    },
+    "./drawing": {
+      "dev": "./src/drawing.ts",
+      "default": "./dist/drawing.js"
+    },
+    "./svg": {
+      "dev": "./src/svg/index.ts",
+      "default": "./dist/svg/index.js"
+    },
+    "./package.json": "./package.json"
+  },
+  "publishConfig": {
+    "access": "public",
+    "exports": {
+      ".": "./dist/index.js",
+      "./colour": "./dist/colour/index.js",
+      "./drawing": "./dist/drawing.js",
+      "./svg": "./dist/svg/index.js",
+      "./package.json": "./package.json"
+    }
+  },
+  "description": "ixfx visual",
+  "keywords": [
+    "ixfx",
+    "interactivity",
+    "visual"
+  ],
+  "homepage": "https://ixfxfun.dev",
+  "bugs": {
+    "url": "https://github.com/clinth/ixfx/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/clinth/ixfx.git",
+    "directory": "packages/visual"
+  },
+  "author": "Clint Heyer <clint@thestaticvoid.net>",
+  "engines": {
+    "node": ">=24.0.0"
+  }
 }
