--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build:serial": "NODE_OPTIONS='--no-deprecation' pnpm run --filter=\"./packages/*\" build && tsdown",
     "dev": "DEV=true tsdown",
     "docs:build": "typedoc --out ../api-docs/docs --options typedoc.json --tsconfig tsconfig.lib.json",
-    "bundle:build": "cd bundle && pnpm run full && pnpm run publish",
+    "docs:watch": "typedoc --watch --out ../api-docs/docs --options typedoc.json --tsconfig tsconfig.lib.json",
+    "bundle:build": "cd bundle && npm publish",
     "demos:copy": "rm -rf ../demos/ixfx && copyfiles -u 3 ./bundle/dist/min/**/* ../demos/ixfx",
     "clean": "rimraf -g dist coverage \"packages/*/dist\" && pnpm run -r --parallel clean",
     "test": "vitest",
