--- a/packages/visual/package.json
+++ b/packages/visual/package.json
@@ -21,7 +21,7 @@
     "@ixfx/random": "workspace:*"
   },
   "devDependencies": {
-    "colorizr": "3.0.7"
+    "colorizr": "catalog:"
   },
   "exports": {
     ".": {
