--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "change-case": "catalog:",
     "eslint": "catalog:",
     "eslint-plugin-unicorn": "catalog:",
+    "happy-dom": "catalog:",
     "monoman": "catalog:",
     "pkg-types": "catalog:",
     "publint": "catalog:",
